--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ img {
 .header-nav__link {
   text-decoration: none;
   color: var(--gray);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav__link:hover,
 .header-nav__link:focus {
@@ -111,7 +111,12 @@ img {
 .header-contact__link {
   text-decoration: none;
   color: var(--lightgray);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-contact__link svg {
+  text-decoration: none;
+  color: var(--lightgray);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contact__link:hover,
 .header-contact__link:focus {
@@ -179,7 +184,7 @@ img {
 .footer-contact__link {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contact__link:hover,
 .footer-contact__link:focus {
@@ -209,7 +214,7 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   margin-right: 10px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-footer-social-div:last-child {
   margin-right: 0px;
@@ -404,7 +409,11 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-team-social-div svg {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-team-social-div:hover svg,
 .icon-team-social-div:focus svg {
@@ -436,7 +445,10 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__bg-and-border svg {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients__bg-and-border:hover svg,
 .clients__bg-and-border:focus svg {
@@ -470,7 +482,7 @@ img {
   border: none;
   padding: 6px 22px 6px 22px;
   cursor: pointer;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-nav__item--btn-design:hover,
 .portfolio-nav__item--btn-design:focus {
@@ -511,7 +523,7 @@ img {
 .portfolio__item {
   background-color: var(--white);
   max-width: 370px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio__img {
   position: relative;
@@ -533,7 +545,7 @@ img {
   line-height: 1.55;
   letter-spacing: 0.03em;
   transform: translatey(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio__item:hover,
 .portfolio__item:focus {
