--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ img {
   text-decoration: none;
   color: var(--black);
 }
+
 .header-logo__link--blue {
   color: var(--blue);
 }
@@ -570,6 +571,8 @@ img {
   width: 100%;
   height: 100%;
   background-color: #00000033;
+  transform: scale(1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
@@ -580,6 +583,7 @@ img {
   min-height: 581px;
   background-color: var(--white);
 }
+
 .close-btn {
   position: absolute;
   top: 8px;
@@ -595,4 +599,5 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transform: scale(0);
 }
