--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ img {
 }
 a.header-nav__link.active-page {
   position: relative;
+  color: var(--blue);
 }
 .active-page::after {
   content: "";
@@ -586,8 +587,8 @@ a.header-nav__link.active-page {
   width: 100%;
   height: 100%;
   background-color: #00000033;
-  transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
